<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBackground"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="@color/colorBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivClose"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_close_dark_grey_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivClose" />

        <ImageView
            android:id="@+id/ivStatus"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintStart_toEndOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="@+id/tvName"
            tools:ignore="ContentDescription"
            tools:src="@drawable/green_circle" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/ivViewImageDescription"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etResponse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/masukan_jawaban_disini"
            android:background="@drawable/grey_edit_text_border"
            android:textColor="@android:color/tertiary_text_light"
            android:inputType="textCapSentences"
            android:imeOptions="actionDone"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivViewImageDescription"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/tvResponseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:text="@string/jawaban"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/etResponse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etResponse" />

        <TextView
            android:id="@+id/tvResponseLabelAnswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold"
            android:text="@string/balasan"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivViewImageDescription"/>

        <TextView
            android:id="@+id/tvResponseAnswered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResponseLabelAnswered" />

        <View
            android:id="@+id/vGaris"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvResponseAnswered"/>

        <ImageView
            android:id="@+id/ivViewImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vGaris"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/vAddImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/grey_edit_text_border"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etResponse" />

        <ImageView
            android:id="@+id/ivAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_a_photo_grey_64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/vAddImage"
            app:layout_constraintEnd_toEndOf="@+id/vAddImage"
            app:layout_constraintStart_toStartOf="@+id/vAddImage"
            app:layout_constraintTop_toTopOf="@+id/vAddImage"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivAddedImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/vAddImage"
            app:layout_constraintEnd_toEndOf="@+id/vAddImage"
            app:layout_constraintStart_toStartOf="@+id/vAddImage"
            app:layout_constraintTop_toTopOf="@+id/vAddImage"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvGambarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@android:color/white"
            android:text="@string/gambar"
            android:textColor="@android:color/tertiary_text_light"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/vAddImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vAddImage" />

        <TextView
            android:id="@+id/tvGambarOptional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/white"
            android:text="@string/gambar_opsional"
            android:textSize="12sp"
            android:textColor="@android:color/tertiary_text_light"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/vAddImage"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_background_rounded_corner"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGambarOptional" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>